tests/should_fail/match_int_on_string_value.nv
module fail
// Int pattern on a string match — type mismatch
let s = "hello"
let r = match s {
    42 => "bad",
    _ => "ok",
}
